Fixed bugs, pre 1.0 bug fixes

--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && electron-builder",
+    "build": "npm run build:electron",
     "build:web": "vite build --config vite.config.web.ts",
+    "build:electron": "cross-env ELECTRON=true vite build",
+    "package": "npm run build:electron && electron-builder --publish never",
     "preview": "vite preview",
     "preview:web": "vite preview --config vite.config.web.ts",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "electron:dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
     "electron:build": "vite build && electron-builder",
     "swa": "swa start ./dist --api-location ./api"
@@ -24,10 +28,11 @@
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
-    "electron": "^28.2.0",
-    "electron-builder": "^24.9.1",
+    "cross-env": "^10.1.0",
+    "electron": "^40.4.1",
+    "electron-builder": "^26.7.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
+    "vite": "^7.3.1",
     "vite-plugin-electron": "^0.28.0",
     "vite-plugin-electron-renderer": "^0.14.5",
     "wait-on": "^7.2.0"
