--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "swa": "swa start ./dist --api-location ./api"
   },
   "dependencies": {
+    "dexie": "^4.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
