--- a/.github/workflows/release-electron.yml
+++ b/.github/workflows/release-electron.yml
@@ -11,7 +11,8 @@ permissions:
   contents: write
 
 jobs:
-  release:
+  # ─── Step 1: Build installers on each platform in parallel ───
+  build:
     strategy:
       fail-fast: false
       matrix:
@@ -50,24 +51,16 @@ jobs:
       - name: Build Electron app
         run: npm run build:electron
 
-      # Package and publish installers to the GitHub Release.
-      # electron-builder creates a draft release if it doesn't exist,
-      # or appends artifacts to an existing one for the same tag.
-      #
-      # CSC_IDENTITY_AUTO_DISCOVERY=false prevents macOS from trying to
-      # code-sign when no certificates are configured. Remove this env var
-      # (or set to true) once you add MAC_CERTS / WIN_CSC_LINK secrets.
-      - name: Package & publish installers
-        run: npx electron-builder --publish always
+      # Build installers WITHOUT publishing (avoids race conditions)
+      - name: Package installers
+        run: npx electron-builder --publish never
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # Disable auto code-signing discovery (prevents failures when
           # no signing certificates are configured as repo secrets).
           CSC_IDENTITY_AUTO_DISCOVERY: 'false'
 
-      # Upload build artifacts as a backup (accessible from the Actions run)
-      - name: Upload artifacts
-        if: always()
+      # Upload installer files as workflow artifacts
+      - name: Upload installer artifacts
         uses: actions/upload-artifact@v4
         with:
           name: installers-${{ matrix.platform }}
@@ -77,8 +70,44 @@ jobs:
             release/*.zip
             release/*.AppImage
             release/*.deb
-            release/*.yml
-            release/*.yaml
             release/*.blockmap
-          if-no-files-found: warn
-          retention-days: 30
+            release/latest*.yml
+          if-no-files-found: error
+          retention-days: 5
+
+  # ─── Step 2: Create a GitHub Release and attach all artifacts ───
+  publish:
+    name: Publish Release
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+          merge-multiple: false
+
+      - name: List downloaded files
+        run: find artifacts -type f | head -50
+
+      # Collect all installer files into a flat directory
+      - name: Flatten artifacts
+        run: |
+          mkdir -p release
+          find artifacts -type f \( \
+            -name '*.exe' -o -name '*.dmg' -o -name '*.zip' \
+            -o -name '*.AppImage' -o -name '*.deb' \
+            -o -name '*.blockmap' -o -name '*.yml' \
+          \) -exec cp {} release/ \;
+          echo "=== Files to release ==="
+          ls -lh release/
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          draft: true
+          generate_release_notes: true
+          files: release/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
