Fix Linux deb build: add author email to package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "apollo-marathon",
   "version": "1.0.0",
   "description": "Apollo — all-in-one marathon training with Strava & Garmin",
-  "author": "LetsLearntocodeforfun",
+  "author": {
+    "name": "LetsLearntocodeforfun",
+    "email": "apollo-running@users.noreply.github.com"
+  },
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
